crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__edit_pane_squeezed.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                            6 in the flock
                                                                                                                        
 ██ api  (sheep config)                                                                                                 
   process   logging   inputs   restart   readiness   shutdown   watch   cron     tab next group   1…8 jump             
  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  FIELD                       VALUE                                                                                     
>  cwd                        (unset)                              FOCUSED  cwd  text                                   
   depends_on                 []                                    Where the process runs. Without it, the daemon's own
   fold                       (unset)                               directory                                           
   group                      (unset)                                                                                   
 = instances                  1                                     now     (unset)                                     
   interpreter                (unset)                               default (none)                                      
 = name                       api                                   example /srv/app                                    
   reuse_port                 false                                                                                     
   script                     ./api/server.js                       ▲ respawn  the sheep must stop and start again      
   user                       (unset)                                            pick the timing when you close the pane
                                                                                                                        
  env                                                               ────────────────────────────────────────────────────
   DATABASE_URL               (set)                                 VALIDATION                                          
   NODE_ENV                   (set)                                 █ an absolute or relative path, expanded from cwd   
   + add a key                                                      █ ~ expands, $VARS do not                           
                                                                    █ a directory that does not exist yet: warned       
                                                                                                                        
                                                                    NEIGHBOURS                                          
                                                                    script  resolved against this cwd                   
                                                                    out_file  relative paths follow it too              
                                                                    watch_options  globs are rooted here                
  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  = read-only, set it in the Flockfile   ~ no widget for this shape   ! parked, awaits a respawn   * yours   -> changed…
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
esc close   j/k select   g/G first/last   r refresh   space cycle   e edit   d back to default   u undo… control enabled
